--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -1,11 +1,36 @@
-<h1>Eventos do Components</h1>
+<h2>Eventos</h2>
+<hr>
 
-<div *ngFor="let evento of eventos">
-  <p><b>ID:</b> {{evento.eventoId}}</p>
-  <p><b>Tema:</b> {{evento.tema}}</p>
-  <p><b>Data Evento:</b> {{evento.dataEvento}}</p>
-  <p><b>Quantidade de Pessoas:</b> {{evento.qtdPessoas}}</p>
-  <p><b>Lote:</b> {{evento.lote}}</p>
-  <p><b>Nome da Imagem:</b> {{evento.imagemURL}}</p>
-  <hr>
-</div>
+<form action="" class="form-inline">
+  <div class="form-group mb-2">
+    <input type="text" class="form-control mr-2" placeholder="buscar...">
+    <button class="btn btn-outline-success">Buscar</button>
+  </div>
+</form>
+
+<table class="table table-striped">
+  <thead class="thead-dark">
+    <tr>
+      <th>#</th>
+      <th>Imagem</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd Pessoas</th>
+      <th>Lote</th>
+      <th>Opções</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
