--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -46,7 +46,7 @@
       <th scope="row">{{evento.id}}</th>
       <td>{{evento.tema}}</td>
       <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.dataEvento | DateFormatPipe}}</td>
       <td>{{evento.qtdPessoas}}</td>
       <td>{{evento.lotes[0].nome}}</td>
       <td>
