Faço uso do ngx toastr para deleção de evento.

--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -17,9 +17,9 @@
   <thead class="thead-dark">
     <tr>
       <th>
-        <button class="btn btn-outline-light btn-sm"
+        <button class="btn btn-outline-light btn-sm" tooltip="Exibir Imagem"
           (click)="alternarImagem()">
-          <i class="{{!exibirImagem ? 'fa fa-eye' : 'fa fa-eye-slash'}}" tooltip="Visualizar Imagem"></i>
+          <i class="{{!exibirImagem ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
         </button>
       </th>
       <th>#</th>
