--- a/Front/ProEventos-App/src/app/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/nav/nav.component.html
@@ -22,7 +22,7 @@
         <li class="nav-item dropdown" dropdown container="body">
           <a dropdownToggle class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            Vinícius
+            Ériko
           </a>
           <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#">
