--- a/Front/ProEventos-App/src/styles.scss
+++ b/Front/ProEventos-App/src/styles.scss
@@ -1,12 +1,10 @@
 
 /* Importing Bootstrap SCSS file. */
-@import "~bootstrap/scss/bootstrap";
-@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
-@import "../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
-@import "~ngx-bootstrap/datepicker/bs-datepicker.scss";
+@import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import '../node_modules/@fortawesome/fontawesome-free/css/all.min.css';
+@import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
+@import '../node_modules/bootswatch/dist/cosmo/bootstrap.min.css';
 
 /* Importing Datepicker SCSS file. */
-@import "~ngx-bootstrap/datepicker/bs-datepicker";
-
-/* Importing Bootstrap SCSS file. */
-@import "~bootstrap/scss/bootstrap";
+@import '~ngx-bootstrap/datepicker/bs-datepicker';
+@import '~ngx-bootstrap/datepicker/bs-datepicker.scss';
