--- a/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/eventos.component.html
@@ -30,7 +30,7 @@
   <table class="table table-striped">
     <thead class="thead-dark">
       <tr>
-        <th>
+        <th class="d-none d-md-table-cell">
           <button class="btn btn-outline-light btn-sm" tooltip="Exibir Imagem"
             (click)="alternarImagem()">
             <i class="{{!exibirImagem ? 'fa fa-eye' : 'fa fa-eye-slash'}}"></i>
@@ -38,16 +38,16 @@
         </th>
         <th>#</th>
         <th>Tema</th>
-        <th>Local</th>
+        <th class="d-none d-md-table-cell">Local</th>
         <th>Data</th>
-        <th>Qtd Pessoas</th>
-        <th>Lote</th>
+        <th class="d-none d-md-table-cell">Qtd Pessoas</th>
+        <th class="d-none d-md-table-cell">Lote</th>
         <th>Opções</th>
       </tr>
     </thead>
     <tbody *ngIf="eventos && eventos.length">
       <tr *ngFor="let evento of eventosFiltrados">
-        <td>
+        <td class="d-none d-md-table-cell">
           <img
             [collapse]="!exibirImagem"
             [isAnimated]="true"
@@ -59,15 +59,12 @@
         </td>
         <th scope="row">{{evento.id}}</th>
         <td>{{evento.tema}}</td>
-        <td>{{evento.local}}</td>
+        <td class="d-none d-md-table-cell">{{evento.local}}</td>
         <td>{{evento.dataEvento | DateFormatPipe}}</td>
-        <td>{{evento.qtdPessoas}}</td>
-        <td>{{evento.lotes[0].nome}}</td>
+        <td class="d-none d-md-table-cell">{{evento.qtdPessoas}}</td>
+        <td class="d-none d-md-table-cell">{{evento.lotes[0].nome}}</td>
         <td>
-          <button class="btn btn-primary mr-2" tooltip="Editar">
-            <i class="fa fa-edit"></i>
-          </button>
-          <button class="btn btn-danger" tooltip="Excluir" (click)="openModal(template)">
+          <button class="btn btn-danger btn-lg" tooltip="Excluir" (click)="openModal(template)">
             <i class="fa fa-trash"></i>
           </button>
         </td>
