--- a/Front/ProEventos-App/src/app/shared/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/shared/nav/nav.component.html
@@ -25,7 +25,7 @@
             Ériko
           </a>
           <div *dropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" routerLink="perfil">
+            <a class="dropdown-item" routerLink="user/perfil">
               Perfil
             </a>
             <div role="separator" class="divider"></div>
