--- a/Front/ProEventos-App/src/app/shared/titulo/titulo.component.html
+++ b/Front/ProEventos-App/src/app/shared/titulo/titulo.component.html
@@ -9,7 +9,7 @@
 
   <div class="p-3" *ngIf="botaoListar">
     <button class="btn btn-outline-light" (click)="listar()">
-      {{titulo}}
+      Listar {{titulo}}
     </button>
   </div>
 </div>
